--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
   text-align: center;
+  color: #3e3e3e;
+  background-color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(66, 164, 255, 0.712);
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  color: #3e3e3e;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.CardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-items: auto;
+}
+
+button {
+  margin: auto;
+  height: 8em;
+  width: 8em;
+  margin: 1em 1em;
+  border: none;
+  background-color: white;
+}
+
+button:active {
+  background-color: rgba(255, 65, 65, 0.699);
 }
