--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ h2 {
 .CardContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-items: auto;
+  justify-content: space-evenly;
 }
 
 button {
