--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,9 @@ h2 {
 }
 
 .CardContainer {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
